
$Id$

News for version 3.8.0, 29 February 2008

The libdap classes and code are now inside of the libdap namespace. In order
to access any of the classes, for example, you will need to do one of the
following. After including the libdap headers you can:

1. add a using statement for the entire libdap namespace:

using namespace libdap ;

2. add a using statement for the classes that you will be using:

using libdap::DAS ;

3. inside your code scope the use of libdap classes.

libdap::DAS *das = code_to_get_das() ;

HTTPCache updated to cache an entry, returning not only the FILE pointer but
also the name of the file in the cache. This way, the cached item could be
passed to a data handler, such as the netcdf_handler, and read.

The pkg build for Mac OSX was updated to automate the creation of the
ReadMe.txt file, add a README and NEWS file to the dmg and automatically
create the dmg using DropDMG.

News for version 3.7.10, 28 November 2007

Fixed XDRStreamMarshaller so that it no longer allocates a huge buffer. This
fixes a bug where the BES fails to start on smaller machines.

News for version 3.7.9, 21 November 2007

Bumped up the soname version numbers for libdaoclient and libdapserver due
to changes in the HTTPResponse and AlarmHandler interfaces.

The transfer_data() method defined for Sequence and Structure has been
generalized and implemented for all classes. In the process, so issues with
the way nested sequences were handled have been fixed. I renamed the method
to intern_data() since it is now a part of libdap (and not just two classes).
The method uses the read() methods defined for the type classes (Byte, ...,
Grid) to read data into variables in a DDS as if they were read in using
deserialize(). This is used by the ASCII response generator and might be used
by other 'formatted output' generators.

Generated files (like the grammar files) are now shipped with the source
distributions. (From Patrice Dumas)
