@@ -314,6 +314,10 @@ HTTPConnect::www_lib_init()
                          d_rcr->get_proxy_server_host().c_str());
         curl_easy_setopt(d_curl, CURLOPT_PROXYPORT,
                          d_rcr->get_proxy_server_port());
+
+	// As of 4/21/08 only NTLM, Digest and Basic work.
+        curl_easy_setopt(d_curl, CURLOPT_PROXYAUTH, (long)CURLAUTH_ANY);
+
         // Password might not be required. 06/21/04 jhrg
         if (!d_rcr->get_proxy_server_userpw().empty())
             curl_easy_setopt(d_curl, CURLOPT_PROXYUSERPWD,
